# Bitflow

./: .env  Cargo.toml  README.md
src/: hash.dim  main.dim  main.rs
src/db/: storage.rs
src/dim/: manifest.rs
src/p2p/: file_manager.rs  mod.rs  network.rs
src/util/: hash.rs
