[package]
name = "Bitflow"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
hex = "0.4.3"
serde = {version = "1.0.219", features = ["derive"]}
tiny-keccak = {version = "2.0.2", features = ["keccak"] }
rmp-serde = "1.1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"